Revert "Bug 942854 - [Calendar] Scrolling the week view results into results into overlapping artifacts. r=kgrandon"
This reverts commit 78dc0c0013d25de52175e750e4be46bfb2727ef3.

--- a/apps/calendar/style/day_views.css
+++ b/apps/calendar/style/day_views.css
@@ -57,6 +57,7 @@
   position: absolute;
   height: 6rem;
   top: 0;
+  z-index: 10;
 }
 
 .day-events .hour-allday .event {
